--- a/apps/website/mfe/src/index.html
+++ b/apps/website/mfe/src/index.html
@@ -17,19 +17,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="google-adsense-account" content="ca-pub-3932183956942705">
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5272792240895393"
-    crossorigin="anonymous"></script>
-  <script async src="https://fundingchoicesmessages.google.com/i/pub-5272792240895393?ers=1"
-    nonce="6KtKAZVMGhLdQGFyr8OlSw"></script>
+
+  <!--allow ads-->
+  <script async src="https://fundingchoicesmessages.google.com/i/pub-3932183956942705?ers=1"
+    nonce="L9HbedJNQ1bgTeUycgFVGQ"></script>
   <script
-    nonce="6KtKAZVMGhLdQGFyr8OlSw">(function () { function signalGooglefcPresent() { if (!window.frames['googlefcPresent']) { if (document.body) { const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe); } else { setTimeout(signalGooglefcPresent, 0); } } } signalGooglefcPresent(); })();</script> -->
+    nonce="L9HbedJNQ1bgTeUycgFVGQ">(function () { function signalGooglefcPresent() { if (!window.frames['googlefcPresent']) { if (document.body) { const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe); } else { setTimeout(signalGooglefcPresent, 0); } } } signalGooglefcPresent(); })();</script>
+
 </head>
 
 <body>
-  <!-- Google Tag Manager (noscript) -->
-  <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WKSR5N86" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript> -->
-  <!-- End Google Tag Manager (noscript) -->
   <cff-v2></cff-v2>
 </body>
 
