--- a/apps/website/mfe/src/index.html
+++ b/apps/website/mfe/src/index.html
@@ -28,6 +28,10 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="assets/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
+  <meta property="og:site_name" content="Clutter Free Finds" />
+  <meta property="og:title" content="Clutter Free Finds" />
+  <meta property="og:url" content="http://clutterfreefinds.com/" />
+  <meta property="og:image" content="assets/images/logo.svg" />
 
   <!--allow ads-->
   <script async src="https://fundingchoicesmessages.google.com/i/pub-3932183956942705?ers=1"
